# Research

./: .gitignore  .gitmodules  CLAUDE.md  DEPLOY_CONSTRAINTS.md  deploy.sh  fix_token.sh  setEnv.sh
data-agent/: .gitignore  DataAgent_Technical_Guide.md  NL2SQL_Research_Landscape.md  PROJECT_CONTEXT.md  README.md  SETUP.md  TELECOM_NMS_V1.md  WrenAI_NL2SQL_Flow.md  create_sample_db.py  eval_framework.py  exp0_opus_100q.json  nl2sql_demo.py  nl2sql_demo_ollama.py  pyproject.toml  refresh_timestamps.py  telecom_test_cases.json
data-agent/chart_engine/: .gitignore  AGENTS.md  Dockerfile  __init__.py  __main__.py  cli.py  config.py  config.yaml.example  examples.py  generator.py  models.py  profiler.py  selector.py  server.py  validator.py
data-agent/chart_engine/cli/: __init__.py  examples.py  main.py
data-agent/chart_engine/core/: __init__.py  builder.py  generator.py  profiler.py  selector.py  validator.py
data-agent/chart_engine/server/: __init__.py  app.py
data-agent/docs/: IMPROVEMENT_PLAN.md  NL2SQL_100Q_TestReport.md  PROJECT_BLUEPRINT.md  TODO.md
data-agent/eval/: AB_TEST_REPORT_v3.md  AGENTS.md  eval_framework.py  eval_result_opus_100q.json  eval_results_v3.json  few_shot_pairs.json  generate_sqls.py  opus_v3_all_sqls.json  refresh_timestamps.py  run_eval_all.py  telecom_test_cases_100.json
data-agent/knowledge/: column_knowledge.yaml  column_sets.yaml  global_rules.yaml  specific_definitions.yaml
data-agent/telecom/: PIPELINE.md  __init__.py  build_init_sql.py  csv_to_ddl.py  csv_to_mdl.py  generate_mock_data.py
(+56 files in other folders)
