[project]
name = "data-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.86.0",
    "datasets>=4.8.4",
    "duckdb>=1.5.1",
    "huggingface-hub>=1.8.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "numpy>=2.4.3",
    "openai>=2.30.0",
    "pandas>=3.0.1",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
    "sqlglot>=30.1.0",
    "python-dateutil>=2.9.0",
    "litellm>=1.83.7",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["chart_engine/tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
